[package]
name = "bbm-core"
edition.workspace = true
version.workspace = true

[dependencies]
bbm-primitives = { workspace = true }

anyhow = { workspace = true }
async-trait = { workspace = true }

log = { workspace = true }

serde = { workspace = true, features = ["derive"] }

wasmtime = { workspace = true, features = ["runtime", "cranelift", "cache"] }
